[package]
name = "levenberg-marquardt-sparse"
version = "0.1.0"
authors = [
    "Jannik Schürg <schuerg@ins.uni-bonn.de>",
    "Geordon Worley <vadixidav@gmail.com>",
]
edition = "2024"
description = "Sparse Levenberg-Marquardt algorithm using PCG-based normal equations, built on nalgebra"
keywords = ["optimization", "sparse", "least-squares", "bundle-adjustment", "slam"]
categories = [
    "algorithms",
    "computer-vision",
    "mathematics",
    "no-std",
    "science::robotics",
]
repository = "https://github.com/rust-cv/levenberg-marquardt"
license = "MIT"
readme = "README.md"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
nalgebra = { version = "0.34", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
arrsac = "0.11.0"
rand = { version = "0.9.2", default-features = false }
rand_chacha = "0.9.0"
nalgebra = "0.34"
sample-consensus = "1.0.2"
approx = "0.5.1"

[build-dependencies]
rustc_version = "0.4.1"

[profile.test]
# The line fitting test case needs this to run in reasonable amount of time
opt-level = 2

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "katex-header.html"]
